# chasm

./: .gitignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  devbox.json  docker-bake.hcl  rust-toolchain.toml
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  format.yml  lint.yml  msrv.yml  release.yml  test.yml
crates/chasm-engine/: Cargo.toml
crates/chasm-engine/src/: engine.rs  lib.rs  loader.rs  prefer.rs  router.rs  security.rs  validation.rs
crates/chasm-engine/tests/: engine.rs  loader.rs  prefer.rs  router.rs  security.rs  validation.rs
crates/chasm-engine/tests/common/: mod.rs
crates/chasm-engine/tests/validation/: body.rs  multipart.rs  params.rs
crates/chasm-faker/: Cargo.toml
crates/chasm-faker/src/: extensions.rs  lib.rs  merge.rs  options.rs  random.rs  ref_resolver.rs  schema_walker.rs
crates/chasm-faker/src/formats/: address.rs  barcode.rs  boolean.rs  color.rs  company.rs  date_time.rs  duration.rs  email.rs  filesystem.rs  finance.rs  hostname.rs  http.rs  idn.rs  internet_extras.rs  ip.rs  json_pointer.rs  lorem.rs  mod.rs  name.rs  path_aliases.rs  phone.rs  pydantic_extras.rs  pydantic_numeric.rs  uri.rs  uri_template.rs  uuid.rs
crates/chasm-faker/src/generators/: array.rs  boolean.rs  composition.rs  enum_const.rs  mod.rs  null.rs  number.rs  object.rs  string.rs
crates/chasm-faker/tests/: fuzz_schemas.rs  unit_tests.rs
crates/chasm-faker/tests/unit/: common.rs  extensions.rs  formats.rs  lib.rs  options.rs  random.rs  ref_resolver.rs  schema_walker.rs
crates/chasm-faker/tests/unit/formats/: company.rs  faker_namespaces.rs  filesystem.rs  finance.rs  numeric.rs  pydantic.rs  string_formats.rs
crates/chasm-faker/tests/unit/generators/: array.rs  boolean.rs  composition.rs  enum_const.rs  null.rs  number.rs  object.rs  string.rs
crates/chasm-server/: Cargo.toml
crates/chasm-server/src/: main.rs
crates/chasm-wasm/: Cargo.toml
crates/chasm-wasm/src/: lib.rs
docs/: BENCHMARKS.md  ENV.md  METRICS.md  PREFER_HEADER.md  SCOPE.md
etc/: auth.yaml  docs-index.html  oas31-nullable.yaml  oneof-discriminator.yaml  petstore.yaml
