[package]
name = "chasm-engine"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "OpenAPI 3.x mock engine: routing, validation, content negotiation, and example/schema response generation."
keywords = ["openapi", "mock", "oas3", "http", "schema"]
categories = ["development-tools::testing", "web-programming::http-server"]
readme = "../../README.md"
publish = false

[dependencies]
chasm-faker = { path = "../chasm-faker" }
openapiv3 = "2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
percent-encoding = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
url = "2"
