[package]
name = "chasm-faker"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Standalone Rust port of json-schema-faker — generates fake values from JSON Schemas."
keywords = ["openapi", "mock", "json-schema", "faker"]
categories = ["development-tools::testing"]
readme = "../../README.md"
publish = false

[dependencies]
serde_json = { workspace = true }
rand = "0.8"
rand_chacha = "0.3"
regex = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
# These two crates are exact-version-pinned because they both moved to rand 0.9
# in later releases, and chasm-faker depends on rand 0.8 ABI throughout.
# Bumping requires updating chasm-faker/src/random.rs to use rand 0.9 idioms.
fake = { version = "=5.1.0", features = ["chrono", "http", "random_color"] }
thiserror = { workspace = true }
rand_regex = "=0.17.0"
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
serial_test = "3"
proptest = "1"
