[package]
name = "chasm-wasm"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "wasm-bindgen bindings for chasm-engine — run OAS3 mocks in Node.js/browsers."
keywords = ["openapi", "mock", "wasm", "wasm-bindgen", "oas3"]
categories = ["development-tools::testing", "wasm"]
readme = "../../README.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chasm-engine = { path = "../chasm-engine" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { version = "1", features = ["v4", "js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
# Recent stable Rust emits these WebAssembly features by default for the
# wasm32 target (reference-types and multivalue became default in 1.82; the
# others have been default for longer). wasm-opt's validator rejects the
# module unless each used feature is explicitly enabled, otherwise the
# optimisation pass fails with "unexpected false: all used features should be
# allowed". Keep this list in step with the toolchain's wasm defaults.
wasm-opt = [
    '-O3',
    '--enable-bulk-memory',
    '--enable-reference-types',
    '--enable-multivalue',
    '--enable-sign-ext',
    '--enable-nontrapping-float-to-int',
    '--enable-mutable-globals',
]
